--- a/styles/global.css
+++ b/styles/global.css
@@ -1,9 +1,15 @@
+@font-face {
+  font-family: 'ColfaxAI';
+  src:  url('fonts/ColfaxAIRegular.woff2') format('woff'),
+  url('fonts/ColfaxAIBold.woff2') format('woff2');
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
-    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: ColfaxAI, -apple-system, Helvetica Neue, sans-serif;
+  font-weight: unset;
   line-height: 1.6;
   font-size: 18px;
 }
